Projet_GL/src/test/deca/syntax/invalid/unprovided/bad_include.deca
//Tests de include sans fichier

#include "blabla"
